--- a/Ceriyo.Core.Tests/Ceriyo.Core.Tests.csproj
+++ b/Ceriyo.Core.Tests/Ceriyo.Core.Tests.csproj
@@ -67,10 +67,11 @@
   <ItemGroup>
     <Compile Include="Attributes\ColorTypeAttributeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scripting\EntityMethodsTests.cs" />
-    <Compile Include="Scripting\LocalDataMethodsTests.cs" />
-    <Compile Include="Scripting\MiscellaneousMethodsTests.cs" />
-    <Compile Include="Scripting\PhysicsMethodsTests.cs" />
+    <Compile Include="Scripting\Common\LoggingMethodsTests.cs" />
+    <Compile Include="Scripting\Server\EntityMethodsTests.cs" />
+    <Compile Include="Scripting\Server\LocalDataMethodsTests.cs" />
+    <Compile Include="Scripting\Server\ScriptingMethodsTests.cs" />
+    <Compile Include="Scripting\Server\PhysicsMethodsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ceriyo.Content\Ceriyo.Content.csproj">
@@ -113,6 +114,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Scripting\Client\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
