--- a/Ceriyo.Core.Tests/Ceriyo.Core.Tests.csproj
+++ b/Ceriyo.Core.Tests/Ceriyo.Core.Tests.csproj
@@ -50,6 +50,10 @@
       <HintPath>..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Squid, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5ba804b1072f6e05, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Ceriyo.Content\Libraries\Squid.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -67,6 +71,9 @@
   <ItemGroup>
     <Compile Include="Attributes\ColorTypeAttributeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scripting\Client\ControlMethodsTests.cs" />
+    <Compile Include="Scripting\Client\SceneMethodsTests.cs" />
+    <Compile Include="Scripting\Client\StyleMethodsTests.cs" />
     <Compile Include="Scripting\Common\LoggingMethodsTests.cs" />
     <Compile Include="Scripting\Server\EntityMethodsTests.cs" />
     <Compile Include="Scripting\Server\LocalDataMethodsTests.cs" />
@@ -115,9 +122,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scripting\Client\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
