--- a/Ceriyo.Content/Ceriyo.Content.csproj
+++ b/Ceriyo.Content/Ceriyo.Content.csproj
@@ -62,6 +62,9 @@
     <Content Include="Graphics\UI\xna_logo.png" />
     <Content Include="Libraries\artemis.dll" />
     <Content Include="Libraries\Squid.dll" />
+    <Content Include="Scripts\Client\LoadUIStyles.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Scripts\TestJS.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
