--- a/Ceriyo.Infrastructure.Tests/packages.config
+++ b/Ceriyo.Infrastructure.Tests/packages.config
@@ -4,4 +4,5 @@
   <package id="Moq" version="4.5.22" targetFramework="net461" />
   <package id="NLua" version="1.3.2.1" targetFramework="net461" />
   <package id="NUnit" version="3.4.1" targetFramework="net461" />
+  <package id="protobuf-net" version="2.1.0" targetFramework="net461" />
 </packages>
