Add TestSetUp class to all unit test projects. Add SetUpEnvironmentDirectory method to TestHelpers

--- a/Ceriyo.Core.Tests/Ceriyo.Core.Tests.csproj
+++ b/Ceriyo.Core.Tests/Ceriyo.Core.Tests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Scripting\Server\LocalDataMethodsTests.cs" />
     <Compile Include="Scripting\Server\ScriptingMethodsTests.cs" />
     <Compile Include="Scripting\Server\PhysicsMethodsTests.cs" />
+    <Compile Include="TestSetUp.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ceriyo.Content\Ceriyo.Content.csproj">
