--- a/Ceriyo.Infrastructure.WPF.Tests/Ceriyo.Infrastructure.WPF.Tests.csproj
+++ b/Ceriyo.Infrastructure.WPF.Tests/Ceriyo.Infrastructure.WPF.Tests.csproj
@@ -70,6 +70,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestSetUp.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ceriyo.Content\Ceriyo.Content.csproj">
