--- a/Ceriyo.Infrastructure.WPF/Ceriyo.Infrastructure.WPF.csproj
+++ b/Ceriyo.Infrastructure.WPF/Ceriyo.Infrastructure.WPF.csproj
@@ -47,6 +47,9 @@
     <Compile Include="Extension\EnumBindingSourceExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
