--- a/Ceriyo.Domain.Services.Tests/Ceriyo.Domain.Services.Tests.csproj
+++ b/Ceriyo.Domain.Services.Tests/Ceriyo.Domain.Services.Tests.csproj
@@ -87,6 +87,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DataServices\ModuleDomainServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSetUp.cs" />
   </ItemGroup>
