--- a/Ceriyo.Toolset.WPF/Ceriyo.Toolset.WPF.csproj
+++ b/Ceriyo.Toolset.WPF/Ceriyo.Toolset.WPF.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
+    <OutputPath>..\bin\x86\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -161,7 +161,9 @@
     <Compile Include="Events\ModuleCreatedEvent.cs" />
     <Compile Include="Events\ModuleLoadedEvent.cs" />
     <Compile Include="Events\AbilityCreatedEvent.cs" />
+    <Compile Include="Events\ModuleOpenedEvent.cs" />
     <Compile Include="Events\ModulePropertiesChangedEvent.cs" />
+    <Compile Include="Events\ModuleSavedEvent.cs" />
     <Compile Include="Events\PlaceableChangedEvent.cs" />
     <Compile Include="Events\PlaceableCreatedEvent.cs" />
     <Compile Include="Events\PlaceableDeletedEvent.cs" />
@@ -223,11 +225,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\OpenModuleView\OpenModule.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\PlaceableEditorView\PlaceableEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ResourceEditorView\ResourceEditor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SaveModuleView\SaveModule.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -309,6 +319,10 @@
       <DependentUpon>NewModule.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\NewModuleView\NewModuleViewModel.cs" />
+    <Compile Include="Views\OpenModuleView\OpenModule.xaml.cs">
+      <DependentUpon>OpenModule.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\OpenModuleView\OpenModuleViewModel.cs" />
     <Compile Include="Views\PlaceableEditorView\PlaceableEditor.xaml.cs">
       <DependentUpon>PlaceableEditor.xaml</DependentUpon>
     </Compile>
@@ -317,6 +331,10 @@
       <DependentUpon>ResourceEditor.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ResourceEditorView\ResourceEditorViewModel.cs" />
+    <Compile Include="Views\SaveModuleView\SaveModule.xaml.cs">
+      <DependentUpon>SaveModule.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SaveModuleView\SaveModuleViewModel.cs" />
     <Compile Include="Views\ScriptEditorView\ScriptEditor.xaml.cs">
       <DependentUpon>ScriptEditor.xaml</DependentUpon>
     </Compile>
