Stubbing out resource editor

--- a/Ceriyo.Toolset.WPF/Ceriyo.Toolset.WPF.csproj
+++ b/Ceriyo.Toolset.WPF/Ceriyo.Toolset.WPF.csproj
@@ -157,16 +157,19 @@
     <Compile Include="Events\Item\ItemChangedEvent.cs" />
     <Compile Include="Events\Item\ItemCreatedEvent.cs" />
     <Compile Include="Events\Item\ItemDeletedEvent.cs" />
+    <Compile Include="Events\ManageResources\ManageResourcesClosedEvent.cs" />
     <Compile Include="Events\Module\ModuleClosedEvent.cs" />
     <Compile Include="Events\Module\ModuleCreatedEvent.cs" />
     <Compile Include="Events\Module\ModuleLoadedEvent.cs" />
     <Compile Include="Events\Ability\AbilityCreatedEvent.cs" />
     <Compile Include="Events\Module\ModuleOpenedEvent.cs" />
     <Compile Include="Events\Module\ModulePropertiesChangedEvent.cs" />
+    <Compile Include="Events\Module\ModulePropertiesClosedEvent.cs" />
     <Compile Include="Events\Module\ModuleSavedEvent.cs" />
     <Compile Include="Events\Placeable\PlaceableChangedEvent.cs" />
     <Compile Include="Events\Placeable\PlaceableCreatedEvent.cs" />
     <Compile Include="Events\Placeable\PlaceableDeletedEvent.cs" />
+    <Compile Include="Events\ResourceEditor\ResourceEditorClosedEvent.cs" />
     <Compile Include="Events\Skill\SkillChangedEvent.cs" />
     <Compile Include="Events\Skill\SkillCreatedEvent.cs" />
     <Compile Include="Events\Skill\SkillDeletedEvent.cs" />
