--- a/Ceriyo.Domain.Services/Ceriyo.Domain.Services.csproj
+++ b/Ceriyo.Domain.Services/Ceriyo.Domain.Services.csproj
@@ -65,8 +65,10 @@
     <Compile Include="Contracts\IDomainServiceNotifier.cs" />
     <Compile Include="DataServices\Contracts\IDataEditorDomainService.cs" />
     <Compile Include="DataServices\Contracts\IModuleDomainService.cs" />
+    <Compile Include="DataServices\Contracts\IResourceEditorDomainService.cs" />
     <Compile Include="DataServices\DataEditorDomainService.cs" />
     <Compile Include="DataServices\ModuleDomainService.cs" />
+    <Compile Include="DataServices\ResourceEditorDomainService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
