--- a/Ceriyo.Core/Ceriyo.Core.csproj
+++ b/Ceriyo.Core/Ceriyo.Core.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Contracts\IObjectMapper.cs" />
     <Compile Include="Scripting\Server\Contracts\IPhysicsMethods.cs" />
     <Compile Include="Contracts\IScreenFactory.cs" />
+    <Compile Include="Services\Contracts\IPathService.cs" />
     <Compile Include="Services\Contracts\IScreenService.cs" />
     <Compile Include="Scripting\Server\Contracts\IScriptingMethods.cs" />
     <Compile Include="Contracts\IScriptService.cs" />
@@ -176,6 +177,7 @@
     <Compile Include="Scripting\Server\LocalDataMethods.cs" />
     <Compile Include="Scripting\Server\ScriptingMethods.cs" />
     <Compile Include="Scripting\Server\PhysicsMethods.cs" />
+    <Compile Include="Services\PathService.cs" />
     <Compile Include="Services\ScreenService.cs" />
     <Compile Include="Services\CameraService.cs" />
     <Compile Include="Services\GameService.cs" />
