--- a/Ceriyo.Server.WPF.Tests/packages.config
+++ b/Ceriyo.Server.WPF.Tests/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="CompareNETObjects" version="3.05.0.0" targetFramework="net461" />
   <package id="Moq" version="4.5.22" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="NUnit" version="3.4.1" targetFramework="net461" />
+  <package id="NUnit" version="3.5.0" targetFramework="net461" />
 </packages>
